<resources>
    <string name="app_name">Contacts</string>

    <string name="hint_name">이름</string>
    <string name="hint_phone">전화번호</string>
    <string name="hint_mail">메일</string>
    <string name="hint_birthday">생일</string>
    <string name="hint_gender">성별</string>
    <string name="hint_note">메모</string>

    <string name="male">남성</string>
    <string name="female">여성</string>

    <string name="more">더보기</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>

    <string name="toast_save">저장이 완료 되었습니다</string>
    <string name="toast_cancel">취소 되었습니다</string>
    <string name="toast_name_empty">이름은 필수 값 입니다.</string>
    <string name="toast_phone_empty">전화 번호는 필수 값 입니다.</string>
</resources>