<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_title"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_android_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/et_height"
        android:layout_marginHorizontal="@dimen/main_margin_horizontal"
        android:layout_marginTop="@dimen/main_margin_top"
        android:background="@drawable/bg_et_hint"
        android:hint="@string/hint_name"
        android:inputType="text"
        android:paddingHorizontal="@dimen/et_padding_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_title" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="0dp"
        android:layout_height="@dimen/et_height"
        android:layout_marginTop="@dimen/main_margin_top"
        android:background="@drawable/bg_et_hint"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:paddingHorizontal="@dimen/et_padding_horizontal"
        app:layout_constraintEnd_toEndOf="@id/et_name"
        app:layout_constraintStart_toStartOf="@id/et_name"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="0dp"
        android:layout_height="@dimen/et_height"
        android:layout_marginTop="@dimen/main_margin_top"
        android:background="@drawable/bg_et_hint"
        android:hint="@string/hint_mail"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="@dimen/et_padding_horizontal"
        app:layout_constraintEnd_toEndOf="@id/et_name"
        app:layout_constraintStart_toStartOf="@id/et_name"
        app:layout_constraintTop_toBottomOf="@id/et_phone" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_more,iv_more" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/cancel"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_save"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/save"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_cancel" />

    <TextView
        android:id="@+id/tv_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_margin_top"
        android:text="@string/more"
        android:textSize="16dp"
        app:layout_constraintEnd_toStartOf="@id/iv_more"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/et_name"
        app:layout_constraintTop_toBottomOf="@id/et_mail" />

    <ImageView
        android:id="@+id/iv_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_keyboard_arrow_down_24"
        app:layout_constraintBottom_toBottomOf="@id/tv_more"
        app:layout_constraintEnd_toEndOf="@id/et_name"
        app:layout_constraintStart_toEndOf="@id/tv_more"
        app:layout_constraintTop_toTopOf="@id/tv_more" />


</androidx.constraintlayout.widget.ConstraintLayout>
